# audio2face

./: Cargo.toml  README.md  plugin.toml
.github/workflows/: release.yml
src/: arkit.rs  lib.rs
src/audio2face/: animator_skin_config.rs  blendshape_data.rs  bvls_solver.rs  identity.rs  inference.rs  mod.rs  npy.rs  npz.rs  pgd_solver.rs  response_curves.rs  solver_math.rs
