[package]
name = "audio2face-plugin"
version = "0.1.0"
edition = "2021"
publish = false

# Standalone workspace — fully decoupled from any parent so the plugin's
# `ort` pin doesn't unify against the host's.
[workspace]

[profile.release]
opt-level = 3
lto = "thin"
debug = 0

[profile.dev]
opt-level = 1
debug = 1
incremental = true

[lib]
name = "audio2face_plugin"
crate-type = ["cdylib"]

# Path-3 hand-rolled plugin: depends ONLY on the skinny
# `remotemedia-plugin-sdk` umbrella. Does NOT link `remotemedia-core` —
# that's what lets Audio2FaceLipSyncNode + its ort/zip/ndarray
# dependencies be removed from the host's core crate without changing
# this plugin's surface.
[dependencies]
remotemedia-plugin-sdk = { git = "https://github.com/RemoteMedia-SDK/remotemedia-sdk.git", rev = "5dd1bc9980eafa51bac188279bb0d29a2bdaba34" }
abi_stable = "0.11"

async-trait = "0.1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
bytemuck = { version = "1.14", features = ["derive"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time"] }
tracing = "0.1"

zip = { version = "2.2", default-features = false, features = ["deflate"] }

# Pin `ort` directly. Matches host workspace's =2.0.0-rc.12 for
# behavioural parity; standalone workspace prevents cross-tree
# unification anyway.
ort = { version = "=2.0.0-rc.12", features = ["half", "download-binaries"] }
